Agragando login y registro

--- a/Django/Libreria/libreria/templates/base.html
+++ b/Django/Libreria/libreria/templates/base.html
@@ -20,8 +20,10 @@
             <a class="nav-item nav-link" href="{% url 'inicio' %}">Inicio</a>
             <a class="nav-item nav-link" href="{% url 'libros'%}">libros</a>
             <a class="nav-item nav-link" href="{% url 'nosotros'%}">nosotros</a>
+            <a class="nav-item nav-link" href="/*">Registro</a>
         </div>
     </nav>
+
  
         <div class="container">
             <div class="row">
